--- a/Practice Create Task 225/__p5 StartTemplate/index.html
+++ b/Practice Create Task 225/__p5 StartTemplate/index.html
@@ -1,5 +1,5 @@
 //Ziggy Sheynin
-//Lab 828 Vectors
+//Practice Create Task
 
 <!DOCTYPE html>
 <html>
@@ -13,6 +13,8 @@
     <script src="sketch.js" type="text/javascript"></script>
     <script src="ball.js" type="text/javascript"></script>
     <script src="ship.js" type="text/javascript"></script>
+    <script src="squares.js" type="text/javascript"></script>
+
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
 
